style.css
/* ... */
html.menu-open .menu-nav [data-source="menu"] a {
	display: block;
	width: 100%;
	padding-bottom: 3%;
	margin-bottom: 5%;
	border-bottom: 1px solid rgba(153, 153, 153, 0.94);
	align-self: inherit;
	font-size: 1.2rem;
}

html.menu-open .menu-nav[data-content-from="social"] a {
	text-align: center;
}

html.menu-open .menu-nav [data-source="social"] svg {
	width: 30px;
	height: 30px;
}

/*  -------  */

header {
	background-color: #000;
	color: #fff;
}

header .logo svg {
	max-width: 454px;
	max-height: 62px;
}

header a,
header nav a {
	font-family: "Gotham";
	font-size: 0.91rem;
	
	text-transform: uppercase;
	
	color: #fff !important;

	-webkit-transition:	color .25s ease-out;
	-moz-transition:	color .25s ease-out;
	-o-transition:		color .25s ease-out;
	transition:			color .25s ease-out;
}

header nav li.active a,
header nav a.active,
header nav a:hover {
	color: #B99219 !important;
}

header nav li {
	position: relative;
}

header nav .submenu {
	display: none;
}

header nav li:hover .submenu {
	position: absolute;
	top: 0;
	left: 50%;

	display: block;
	width: auto;
	
	padding-top: 32px;

	/*Y up/down*/
	/*X left/right*/
	transform: 			translateX(-50%);
	-webkit-transform: 	translateX(-50%);
	-ms-transform: 		translateX(-50%);
	-o-transform: 		translateX(-50%);
	-moz-transform: 		translateX(-50%);

}

header nav li:hover .submenu ul {
	padding: 0 10px;
	background-color: rgba(0, 0, 0, 0.76);
}

header nav li:hover .submenu ul li {
	border-bottom: 1px solid #fff;
	padding: 15px 0;
}

header nav li:hover .submenu ul li a {
	white-space: nowrap;
}

header nav li:hover .submenu ul li:last-child {
	border-bottom: transparent;
}
	
header .social li svg {
	width: 20px;
	height: 20px;
}

header .cata {
	display: inline-block;
	max-width: 30px;
	max-height: 40px;
    margin-top: -15px;
    float: right;
}

header .lang li {
	position: relative;
}

/*
header .lang li:not(:last-child)::after {
	content: '-';
	position: absolute;
	right: -50%;
}
*/

footer {
	font-size: 0.91rem;
}

footer .sep {
	border-top: 1px solid #cccccc;
}

footer .sponsors {
	position: relative;
	text-align: right;
}

footer .sponsors img {
	max-width: 166px;
	max-height: 38px;
}

footer .menu {
	white-space: nowrap;
}

footer .menu li {
	position: relative;
	display: inline-block;
	width: auto;
	padding-right: 5%;
	margin-right: 4%;
}

footer .menu li:last-child {
	padding-right: 0;
	margin-right: 0;
}

footer .menu li:not(:last-child)::after {
	content: '|';
	position: absolute;
	color: #000;
	right: 0%;
}

main .g > .mc {
	margin-left: auto !important;
	margin-right: auto !important;
}

main .sep-v {
	border-bottom: 4px solid #808080;
}

[class*=flx].hs {
	display: flex !important;
}

main .product-grid .sep {
	border-bottom: 1px solid #ccc;
	border-right: 1px solid #ccc;
}

main .product-grid .sep:last-child {
	border-right: 1px solid transparent;
}

video {
	display: inline-block;
}

[data-slider-id] {
	position: relative;
	display: block;
	width: 100%;
}

[data-slider-id] .player {
	display: block;
	
	-webkit-transform: translate3d(0, 0, 0);
	-moz-transform: translate3d(0, 0, 0);
	-ms-transform: translate3d(0, 0, 0);
	-o-transform: translate3d(0, 0, 0);
	transform: translate3d(0, 0, 0);

	-webkit-backface-visibility: hidden;
	-webkit-transition: opacity 500ms linear, left 167ms, top 167ms;
	-webkit-transition-delay: 200ms, 0s, 0s;
	-moz-transition: opacity 500ms linear 200ms, left 167ms, top 167ms;
	-o-transition: opacity 500ms linear 200ms, left 167ms, top 167ms;
	transition: opacity 500ms linear 200ms, left 167ms, top 167ms;
}

[data-slider-id] video {
	display: block;
	width: 100%;
	
	z-index: 1;

	-webkit-transition: width 167ms, height 167ms;
	-moz-transition: width 167ms, height 167ms;
	-o-transition: width 167ms, height 167ms;
	transition: width 167ms, height 167ms;

	opacity: 0;
}

@media (max-width: 768px) {
	
	.menu-container {
		top: 0.5em;
	}
	
	[class*=flx].hs {
		display: none !important;
	}
	
	main .product-grid .sep.ws-1-2:nth-child(2n+0) {
		border-right: 1px solid transparent;
	}
	
	header [data-content-from="logo"],
	header [data-content-from="social"] {
		margin-left: auto !important;
		margin-right: auto;
	}
	
	header [data-content-from="lang"] ul {
		width: 100%;
		justify-content: normal !important;
		text-align: right;
	}
	
	header [data-content-from="lang"] li:not(:last-child) {
		padding-right: 10px;
	}
	
	footer .sponsors {
		text-align: center;
	}
	
	/* nav menu */
	
	[data-content-from="menu"] {
		position: absolute;
		z-index: 100;
	}
	
	[data-content-from="menu"]::after {
		content: '';
		position: absolute;
		top: 0;
		left: -4px;
		width: calc(100% + 8px);
		height: 100%;
		z-index: -1;
		background-color: rgba(0, 0, 0, 0.9);
	}
	
	[data-content-from="menu"] a {
		padding-bottom: 5%;
	}
	
	[data-content-from="menu"] a.active {
		color: #B99219 !important;
	}
	
	[data-content-from="menu"] .submenu {
		display: none;
		padding-top: 5%;
		background-color: #000;
	}
	
	html.menu-open .menu-nav [data-source="menu"] li {
		padding-top: 0;
		padding-bottom: 0;
	}
	
	[data-content-from="menu"] .submenu ul {
		padding: 0;
	}
	
	[data-content-from="menu"] .submenu ul a {
		margin: 0;
		padding: 0;
	}
	
	[data-content-from="menu"] a {
		position: relative;
	}
	
	[data-content-from="menu"] a[data-submenu="1"].open {
		color: #B99219 !important
	}
	
	[data-content-from="menu"] a[data-submenu="1"].open::after {
		transform: rotate(90deg);
	}
	
	[data-content-from="menu"] a[data-submenu="1"]::after {
		content: '\2023';
		position: absolute;
		top: 0;
		right: 0;
		color: #fff;
	}
	
	/* nav menu */
}

